<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Marvel</string>
    <string name="BLANK"></string>
    <string name="STrain">Train</string>
    <string name="SViewAll">View all faces</string>
    <string name="SSearch">Search</string>
    <string name="SDelete">Delete</string>
    <string name="SEnter">Enter face name, then pres Rec</string>
    <string name="SStopTrain">Stop Training</string>
    <string name="SStopSearch">Stop Search</string>
    <string name="Straininig">Training...</string>
    <string name="SCanntoPredic">More than one face is needed to predict</string>
    <string name="SIdle">Idle</string>
    <string name="SFaceName">Face name:</string>
    <string name="SSearching">Searching</string>
    <string name="SFrontCamera">Front Camera</string>
    <string name="SBackCamera">Back Camera</string>
    <string name="training">Registra Rostro</string>
    <string name="recognize">Dectecta Rostro</string>
    <string name="capture">Capture</string>
    <string name="image_preview">image preview</string>
    <string name="capturing">Capturing</string>
    <string name="results">Recognized Faces</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning</string>
    <string name="next">Siguiente</string>
    <string name="please_enter_the_same_name_for_the_same_person_everytime_you_train_that_person">Por favor registre el mismo nombre cada vez que se registre el mismo rostro</string>
    <string name="who_are_you_going_to_train">A quien vas a Registrar?</string>
    <string name="commit_attendance">Commit Attendance</string>
    <string name="give_attendance">Give Attendance</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Domicilio">Domicilio</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Telefono">Telefono</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_principal_menu">principalMenu</string>
    <string name="title_activity_personal_proyecto">personalProyecto</string>
    <string name="title_activity_personal_proyecto2">personalProyecto2</string>
    <string name="title_activity_lista_empleados4">ListaEmpleados4</string>
    <string name="title_activity_checkin_checkout">CheckinCheckout</string>
</resources>
