<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="org.opencv.cultoftheunicorn.marvel.cultoftheunicorn.marvel.NameActivity">


        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/nextButton"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/apellido"
            android:layout_centerHorizontal="true"
            android:text="@string/Domicilio"
            android:textColor="@color/lightBlack"
            android:textSize="14sp"
            tools:text="Domicilio" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="31dp"
            android:text="@string/who_are_you_going_to_train"
            android:textColor="@color/lightBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txtdomicilio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:text="@string/Nombres"
            android:textColor="@color/lightBlack"
            android:textSize="14sp"
            tools:text="Nombre" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:text="@string/Apellidos"
            android:textColor="@color/lightBlack"
            android:textSize="14sp"
            tools:text="Apellidos" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/please_enter_the_same_name_for_the_same_person_everytime_you_train_that_person"
            android:textAlignment="center"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtdomicilio"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:inputType=""
            android:textAlignment="center"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-1dp"
            android:gravity="center"
            android:inputType=""
            android:textAlignment="center"
            android:textSize="14sp" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimary"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/domicilio"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView5"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="14sp"
            android:inputType="" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/domicilio"
            android:layout_centerHorizontal="true"
            android:text="@string/Ciudad"
            android:textColor="@color/lightBlack"
            android:textAlignment="center"
            tools:text="Ciudad" />

        <EditText
            android:id="@+id/ciudad"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ciudad"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/Telefono" />

        <EditText
            android:id="@+id/telefono"
            android:layout_width="354dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:inputType="textPersonName"
            android:gravity="center"
            android:textAlignment="center"
            android:textSize="14sp" />

    </RelativeLayout>

</ScrollView>


